--- a/definator.desktop
+++ b/definator.desktop
@@ -2,18 +2,18 @@
 #
 #Not guaranteed to work every where
 #
+
 [Desktop Entry]
 Categories=Education;
 Comment=Define things
 Path=$PATH/../opt/definator
 Exec=definator
-Icon=definator.xpm
+Icon=definator
 Name=Definator
 NoDisplay=false
 StartupNotify=true
-Terminal=0
-TerminalOptions=
+Terminal=false
 Type=Application
-Version=0.02
 X-KDE-SubstituteUID=false
 X-KDE-Username=
+X-Desktop-File-Install-Version=0.22
